--- a/views/layouts/landing.handlebars
+++ b/views/layouts/landing.handlebars
@@ -8,17 +8,13 @@
   <link rel="stylesheet" href="/stylesheets/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
-
-
-
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
   <title>Weigh to Go!</title>
 </head>
 
 <body>
-  {{!-- <div class="container"> --}}
   {{{body}}}
-  {{!-- </div> --}}
 </body>
 
 </html>
