--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,17 +6,45 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="/stylesheets/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
-
-
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
   <title>Weigh to Go!</title>
 </head>
 
 <body>
-  {{!-- <div class="container-fluid"> --}}
+  <section id="add" class="container-fluid">
+    <div class="row" id="dashboardNav">
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand">Weigh to Go</a>
+        <!--Button for responsive design-->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!--This is where the Navbar is encoded-->
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link disabled" href="/dashboard">Dashboard<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/update">Update Your Journey</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/Calorie_counter">Food Diary</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/logout">Logout</a>
+            </li>
+
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </section>
   {{{body}}}
-  {{!-- </div> --}}
 </body>
 
 </html>
