updated weight page now rendering new weight and goal

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -20,7 +20,7 @@
             trying to lose weight, a general rule of thumb is to reduce your calorie intake to 500 fewer calories than
             your body needs to maintain your current weight. This will help you lose about 1 pound of body weight per
             week.</p>
-        <h4>Based on the info you provided, to lose 2 pound a week, strive to eat <span class="one_pound">1690</span>
+        <h4>Based on the info you provided, to lose 2 pound a week, strive to eat <span class="calories_per_day"></span>
             calories per day.</h4>
     </div>
 </div>
