--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -3,7 +3,7 @@
         <h2 for="goal_difference">Congratulations on your weight loss journey <span class="username">human</span>!</h2>
         <br>
         <div class="input-group">
-            <h5>Your former weight was <span class="current_weight">167</span> pounds</h5>
+            <h5>Your weight is <span class="current_weight">167</span> pounds</h5>
         </div>
         <br>
         <form class="update">
@@ -16,7 +16,7 @@
             </div>
         </form>
         <br>
-        <h4>You are now <span class="updated_difference">12</span> pounds away from your goal!</h4>
+        <h4>You are now <span class="updated_difference"></span> pounds away from your goal!</h4>
         <br>
     </div>
 </div>
