--- a/views/Calorie_counter.handlebars
+++ b/views/Calorie_counter.handlebars
@@ -3,8 +3,7 @@
     <div class="col p-2 calorieEntry">
       <div class=" form-wrap">
         <h4> Hello <span></span>!</h4>
-        <p> Today's Date is: </p>
-        <p class="currentDate">Date</p>
+        <p> Today's Date is: <span class="currentDate"></span></p>
         <p> Your Calorie Goal for Today is: </p>
         </form>
       </div>
